--- a/arquitectura-css-assets/assets/css/banner/banner-imagen.css
+++ b/arquitectura-css-assets/assets/css/banner/banner-imagen.css
@@ -1,4 +1,5 @@
 .banner__imagen {
+    background: url("../../img/banner.jpg") no-repeat center / cover;
     height: calc(100vh - 72px);
     width: 100%;
 }
