--- a/arquitectura-css-assets/assets/css/recetas.css
+++ b/arquitectura-css-assets/assets/css/recetas.css
@@ -2,5 +2,22 @@
     background: #e5e5e5;
     display: flex;
     flex-wrap: wrap;
-    padding: 5rem 0 0 5rem;
+}
+
+@media screen and (min-width: 0) {
+    .recetas {
+        padding: 5rem 0 0 1rem;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .recetas {
+        padding: 5rem 0 0 2.5rem;
+    }
+}
+
+@media screen and (min-width: 922px) {
+    .recetas {
+        padding: 5rem 0 0 5rem;
+    }
 }
