--- a/arquitectura-css-assets/assets/css/personas.css
+++ b/arquitectura-css-assets/assets/css/personas.css
@@ -8,3 +8,28 @@
     padding-top: 3rem;
     justify-content: space-around;
 }
+
+@media screen and (min-width: 0) {
+    .persona {
+        margin-bottom: 2rem;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .persona {
+        margin-bottom: 0;
+    }
+}
+
+@media screen and (min-width: 0) {
+    .personas {
+        flex-direction: column;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .personas {
+        flex-direction: row;
+    }
+}
+
