--- a/arquitectura-css-assets/assets/css/recetas/receta.css
+++ b/arquitectura-css-assets/assets/css/recetas/receta.css
@@ -3,10 +3,29 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 5rem;
-    margin-right: 5rem;
-    width: calc(25% - 5rem);
 }
 
 .receta__imagem {
     height: 200px;
+}
+
+@media screen and (min-width: 0) {
+    .receta {
+        margin-right: 1rem;
+        width: 100%;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .receta {
+        margin-right: 2.5rem;
+        width: calc(33% - 2.5rem);
+    }
+}
+
+@media screen and (min-width: 922px) {
+    .receta {
+        margin-right: 5rem;
+        width: calc(25% - 5rem);
+    }
 }
