--- a/arquitectura-css-assets/assets/css/sobre/sobre.css
+++ b/arquitectura-css-assets/assets/css/sobre/sobre.css
@@ -1,4 +1,16 @@
 .sobre{
     text-align: center;
-    padding: 2.5rem;
+}
+
+
+@media screen and (min-width: 0) {
+    .sobre {
+        padding: 2.5rem 1rem;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .sobre {
+        padding: 2.5rem;
+    }
 }
